+ temporary fix on protecting console route + fixed header on mobile + fixed additoinal /api in url

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	background-color: #673ab8;
+	width: 100%;
 }
 
 header nav {
